# pydb

./: setup.cfg
pydb/connection/: __init__.py  sqlite.py
pydb/interface/: TableInterface.py
pydb/query/sql/: __init__.py  table.py
pydb/query/sql/statement/: __init__.py
pydb/tools/: args.py
tests/: __init__.py
tests/connections/: test_connection.py  test_sqlite_connection.py
tests/query/sql/statement/: test_sql_statement.py
tests/query/sqlite/: test_sqlite_query.py
tests/tools/: test_args.py
