[metadata]

name = pydb-ekasi-developer
version = 0.0.1
author = Themba Lucas Ngubeni
author_email = thembangubeni04@gmail.com
description = Simple database connection package/library
long_description = file:README.md
long_description_content = text/markdown
url = https://www.github.com/ekasi-developer/pydb
project_urls =
    Bug Trucker = https://www.github.com/ekasi-developer/pydb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6